k8s/02-addons/kubelet-serving-cert-approver.yaml
---
# yaml-language-server: $schema=https://kubeschema.imranh.org/core/v1/namespace
apiVersion: v1
kind: Namespace
metadata:
  name: kubelet-csr
  labels:
    app.kubernetes.io/instance: kubelet-serving-cert-approver
    app.kubernetes.io/name: kubelet-serving-cert-approver
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
